# TrustBridge

./: .env  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  REFACTORING_GUIDE.md  TrustBridge_Build_Documentation.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  setup.sh  start-local.sh  verify_structure.py
Backend/: STRUCTURE.md  main.py
Backend/app/: __init__.py  config.py  dependencies.py
Backend/app/engines/: behavioral.py  psychometric.py  social_graph.py
Backend/app/models/: __init__.py
Backend/data/: generate_mock.py
Backend/db/: schema.sql
Backend/engines/: fusion.py
Frontend/: app.py
backend/: db.py  main.py
backend/data/: generate_mock.py  mock_merchants.json  seed_realistic.py
backend/db/: schema.sql
backend/engines/: behavioral.py  fusion.py  inference.py  psychometric.py  social_graph.py
backend/outputs/: isolation_forest.pkl  xgb_risk_classifier.pkl
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: GraphTab.jsx  PsychometricTab.jsx  ScoreRing.jsx  ScoreTab.jsx  Sidebar.jsx
frontend/src/lib/: api.js
