[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustbridge"
version = "1.0.0"
description = "Alternative Trust Middleware for Unbanked Merchants"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "TrustBridge Team", email = "team@trustbridge.dev"}
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.7.0",
    "python-dotenv==1.0.1",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.30",
    "networkx==3.3",
    "google-generativeai==0.8.0",
    "faker==25.0.0",
    "numpy==1.26.4",
    "scikit-learn==1.5.0",
    "xgboost==2.0.3",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "streamlit==1.35.0",
    "plotly==5.22.0",
    "pandas==2.2.2",
    "python-jose==3.3.0",
    "httpx==0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.1",
    "ruff==0.1.11"
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W"]
ignore = ["E501"]
