[project]
name = "trustbridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faker>=40.19.1",
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
    "xgboost>=3.2.0",
]
